	- add --suggests and --enhances popt aliases for header extensions.
	- implement %triggerprein scriptlets.
	- fix: unlink __db* files if dbenv->open returns EINVAL.
	- fix: attempt solve db open only once.
	- python: change ts.check callback, pass rpmds, not TagN, N, EVR, Flags.
	- python: set pkgorigin in hdr by extracting from yum (h,path) pkgkey.

4.4.1 -> 4.4.2:
	- start 4.4.2 devel.
	- sqlite3: revert cClose scoping, data is freed in cClose unlike db4.
	- build against sqlite3-3.1.2.
	- sqlite3: update encode/decode from sqlite-2.8.16.
	- add --xml popt alias for query modes.
	- remove _rpmdb now that python2.[34] are commonly available.
	- remove remnant -I/opt/local hacks, --prefix=/usr is recommended.
	- rework configure.ac et al to lose internal library baggage flexibly.
	- updated sv.po <goeran@uddrborg.se>.
	- permit gpg to be used for RSA signatures.
	- permit RSA key sizes larger than 1024 bits.
	- permit RSA/{sha1,sha256,sha384,sha512} signature verification.
	- updated de.po (#162756).
	- added CVSId: tag and SVNId: alias (#162807).
	- added brp-java-gcjcompile build helper.
	- fix: java compiled with -O0 confuses debugedit (#161722).
	- fix: % at end-of-line overflow (#161091).
	- *_terminate_build macros set per-pkg, not per-invocation (#161081).
	- use perldeps.pl, phase out perl.{req,prov} (#161921).
	- fix: make sqlite3 rpmdb endian-neutral (#159425).
	- fix: permit sqlite3 rpmdb with chroot (#159424).
	- fix: find-debuginfo.sh not handling set[ug]id ELF files (#100963).
	- fix: find-debuginfo.sh kernel voo-doo tweaks (#159346).
	- fix: initialize variables used in debug msg (#160458).
	- permit zlib in rpm to be built with make -j (#159404).
	- avoid '?' for zero length file mmap failure doing md5 (#159405).
	- permit scriptlet includes from builddir for spec files w/o %setup.
	- upgrade to zlib-1.2.2.4 internal.
	- macosx: avoid minigzip build failures.
	- upgrade to file-4.14 internal.